# sem2_lab3

./: CMakeLists.txt  main.c  spetial_operations.c  table.c  table_1_funcs.c  table_2_funcs.c  table_creation.c  table_functions.c
headers/: commands.h  spetial_operations.h  table_1_funcs.h  table_2_funcs.h  table_creation.h  table_functions.h  table_structs.h
libs/: FGetLine.c  MyString.c
libs/headers/: Errors.h  FGetLine.h  MenuCreation.h  MyString.h  Stack.h  TypesInStack.h  enum_names.h  functions_ptrs.h
